--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,
-         initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        こんにちは！訓練頑張ります！
-        でも暑いので大変です！
-        でもやっぱり頑張ります！
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="これは全く新しい英語塾です！
+    老若男女誰でもwelcomeの地域密着型教室となります！">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Global English Academy</title>
+</head>
+
+<body>
+    <header>
+        <div>
+            <!-- 見出し -->
+            <h1>Global English Academy</h1>
+        </div>
+        <!-- メインナビゲーション -->
+        <nav>
+            <ul> <!-- 箇条書きリスト -->
+                <li>当塾の強み</li>
+                <li>コース・料金</li>
+                <li>お問い合わせ</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <!-- 最大幅を決める -->
+        <div>
+            <!-- メインビジュアル -->
+            <section>
+                <p>あなたの世界を広げる本物の英語力を。</p>
+                <P>初心者からビジネスレベルまで、あなたの目標を全力サポートします。</P>
+                <P>まずは無料カウンセリングから</P>
+            </section>
+        </div>
+    </main>
+
+</body>
+
+</html>
