--- a/index.html
+++ b/index.html
@@ -7,31 +7,34 @@
     老若男女誰でもwelcomeの地域密着型教室となります！">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global English Academy</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
     <header>
         <div>
             <!-- 見出し -->
-            <h1>Global English Academy</h1>
+            <h1><img src="images/logo.png" alt="GLOBAL English ACADEMY"></h1>
         </div>
         <!-- メインナビゲーション -->
         <nav>
             <ul> <!-- 箇条書きリスト -->
-                <li>当塾の強み</li>
-                <li>コース・料金</li>
-                <li>お問い合わせ</li>
+                <li><a href="">当塾の強み</a></li>
+                <li><a href="">コース・料金</a></li>
+                <li><a href="">お問い合わせ</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <!-- 最大幅を決める -->
-        <div>
+        <!-- 最大幅を決めるクラス -->
+        <div class="wrapper">
             <!-- メインビジュアル -->
             <section>
-                <p>あなたの世界を広げる本物の英語力を。</p>
-                <P>初心者からビジネスレベルまで、あなたの目標を全力サポートします。</P>
-                <P>まずは無料カウンセリングから</P>
+                <!-- <img src="images/main-visual.png" alt="メインビジュアル"> -->
+                <p class="main-catch">あなたの世界を広げる、<span>本物の英語力</span>を。</p>
+                <p>初心者からビジネスレベルまで、あなたの目標を全力サポートします。</p>
+                <a class="cta-button">まずは無料カウンセリングから</a>
             </section>
         </div>
     </main>
