一旦の完成

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     老若男女誰でもwelcomeの地域密着型教室となります！">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global English Academy</title>
+    <!-- リセットCSS -->
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -20,9 +22,9 @@
         <!-- メインナビゲーション -->
         <nav>
             <ul> <!-- 箇条書きリスト -->
-                <li><a href="">当塾の強み</a></li>
-                <li><a href="">コース・料金</a></li>
-                <li><a href="">お問い合わせ</a></li>
+                <li><a href="#features">当塾の強み</a></li>
+                <li><a href="#courses">コース・料金</a></li>
+                <li><a href="#contact">お問い合わせ</a></li>
             </ul>
         </nav>
     </header>
@@ -140,7 +142,17 @@
             </section>
         </div>
     </main>
+    <!-- footer -->
+    <footer>
+        <ul>
+            <li>
+                <a href="#">プライバシーポリシー</a>
+                <a href="#">会社概要</a></li>
 
+        </ul>
+        <!-- コピーライト表記 -->
+         <P>&copy; 2025 GLOBAL English ACADEMY.All.Right</P>
+    </footer>
 </body>
 
 </html>
